src/css/components/_monaco.scss
.flex-wrapper {
  @apply w-full relative block;
  @apply flex gap-1;

  height: 335px;
  min-height: 335px;

  @apply lt-sm:flex-col;
}

.tab-btns {
  .action-btns {
    @apply flex;
  .btn {
    @apply border-0 dark:border-0;
  }
  }
  .active {
    @apply bg-gray-100 dark:bg-quaternary dark:hover:bg-gray-800;
  }
}

.settings-btn {
    @apply px-3 py-2 rounded-md;
    @apply flex items-center justify-center ;
    svg {
      vertical-align: middle;
      fill: currentColor;
      width: 1em;
    }
}

.drag-section {
  &,
  &.drag-handle {
    touch-action: none;
  }

  &.dynamic {
    @apply flex lt-sm:flex-row items-center justify-center sm:h-full lt-sm:pt-2 lt-sm:pb-2;

    .drag-handle {
      @apply w-12 h-1 sm:w-1 sm:h-12 rounded-full;
      @apply bg-slate-500/30 hover:bg-gray-600/40 dark:hover:bg-gray-400/40 cursor-ns-resize sm:cursor-ew-resize;

      @media (pointer: coarse) {
        @apply w-12 h-2 sm:w-2 sm:h-12;
      }
    }
  }

  &.horizontal {
    @apply flex flex-row items-center justify-center h-full px-2;

    .drag-handle {
      @apply w-1 h-12 rounded-full;
      @apply bg-slate-500/30 hover:bg-gray-600/40 dark:hover:bg-gray-400/40 cursor-ew-resize;

      @media (pointer: coarse) {
        @apply w-2 h-12;
      }
    }
  }

  &.vertical {
    @apply flex items-center justify-center w-full py-2;

    .drag-handle {
      @apply w-12 h-1 rounded-full;
      @apply bg-slate-500/30 hover:bg-gray-600/40 dark:hover:bg-gray-400/40 cursor-ns-resize;

      @media (pointer: coarse) {
        @apply w-12 h-2;
      }
    }
  }
}

.app {
  @apply relative block w-full;
  height: 170px;

  @screen sm {
    height: 100%;
  }

  .editor-container {
    @apply bg-white border border-gray-300;
    @apply dark:bg-elevated dark:border-gray-700;
    @apply rounded-lg shadow-lg;
    @apply relative block w-full;
    height: 100%;

    padding-top: 15px;
    padding-bottom: 15px;

    font-family: Consolas, "Courier New", monospace;
    font-weight: normal;
    font-size: 14px;
    font-feature-settings: "liga" 0, "calt" 0;
    line-height: 19px;
    letter-spacing: 0px;

    .monaco-hover-content h3 {
      @apply text-lg font-bold;
    }
  }
}

.app#input {
  --spacing: theme("spacing.10");
  @supports (padding-left: env(safe-area-inset-right)) {
    --spacing: calc(
      theme("spacing.10") + env(safe-area-inset-right) +
        env(safe-area-inset-left)
    );
  }

  min-height: 80px;
  min-width: 200px;
  // max-width: calc(theme("screens.lg") - theme("spacing.3") - 25px - var(--spacing));
}

.app#console {
  height: 140px;
  flex: 1 1 0%;
  @screen sm {
    height: 100%;
    min-width: 17.6rem;
  }

  .config-editor {
    height: 100%;
  }

  pre.console {
    @apply h-full relative;
    max-height: 100%;
    @apply flex flex-col;
  }

  pre.console code {
    // content-visibility: ;
    content-visibility: auto;
    contain-intrinsic-size: 300px; /* Explained in the next section. */
    @apply overflow-auto overscroll-y-contain relative;
  }

  .console-btns {
    @apply flex flex-wrap p-2 gap-2;

    .btn {
      @apply mr-0;
    }
    .icon {
      @apply text-sm;
    }
  }
}

.info-pane {
  @apply flex w-full lt-sm:flex-col gap-2 lt-sm:gap-3;
  flex-wrap: nowrap;

  #bundle-time {
    @apply w-full;
    min-height: theme("spacing.6");
  }

  .btn,
  button {
    @apply border border-gray-300;
    @apply dark:border-gray-600;
  }

  .action-btns-overflow {
    @apply flex-grow;
    overflow-x: auto;
  }

  .action-btns {
    @apply flex flex-grow align-middle gap-2;
    position: relative;
  }

  .btn {
    margin: 0;
  }
}

.file-size-container {
  @apply inline-block px-4 py-2 rounded-md;
  @apply text-gray-500 dark:text-secondary;
  // @apply bg-gray-200 dark:bg-quaternary;
  @apply bg-white border border-gray-300;
  @apply dark:bg-elevated dark:border-gray-700;

}

.file-size {
  @apply text-center flex justify-center items-center;
  // min-width: theme("spacing.24");
  min-width: 12ch;
  white-space: nowrap;

  min-height: theme("spacing.9");
}

.input-file-size {
  @apply tabular-nums;
  @apply inline-block px-4 py-2 rounded-md;
  @apply text-center flex justify-center items-center;
  @apply text-gray-500 dark:text-secondary;
  @apply bg-white border border-gray-300;
  @apply dark:bg-elevated dark:border-gray-700;
  min-width: 10ch;
  white-space: nowrap;
  line-height: 1;

  .loading {
    height: 100%;
    width: auto;
    aspect-ratio: auto 1;
    border-width: 0.1rem;
  }
}

#editor {
  transition: opacity ease 0.6s;
  height: 100%;
  opacity: 0;
  // height: calc(100% - 30px);
  // min-height: 400px - 30px - 56px;

  @screen lt-md {
    // min-height: 300px - 30px - 56px;
  }

  &.show {
    opacity: 1;
  }
}

.monaco-editor .peekview-widget .monaco-list .monaco-list-row .codicon {
  padding-right: 14px;
}

.loading {
  @apply block mx-auto w-8 h-8 rounded-full;
  border-width: theme("spacing.1");
  border-color: theme("colors.gray.300");
  border-top-color: theme("colors.blue.500");
  animation: spin 1s linear infinite;
}

.dark .app .editor-container {
  background-color: #0d1117;
  border: 1px solid #30363d;
}

.dark .center-container {
  background-color: #121212;

  @supports (backdrop-filter: blur(8px)) {
    @apply bg-center-container-dark bg-opacity-20;
  }
}

.dark .loading {
  border-color: theme("colors.tertiary");
  border-top-color: theme("colors.blue.400");
}

.center-container {
  @apply absolute top-0 left-0 w-full h-full;
  @apply grid justify-center content-center;
  @apply z-10;
  background-color: #f8f8f8;

  @supports (backdrop-filter: blur(8px)) {
    @apply bg-white;
    @apply backdrop-filter backdrop-blur bg-opacity-20;
  }

  p {
    @apply mt-2;
  }
}

@keyframes spin {
  to {
    transform: rotate(360deg);
  }
}

#bundle-time {
  @apply flex items-center;
}

#editor {
  /* height: 100%; */
  width: 100%;
}

.current-line {
  width: calc(100% - 20px);
  border-radius: 4px;
}

.editor-btns {
  transition: opacity ease 0.8s;
  @apply absolute bottom-2 right-0 px-5 w-full flex-wrap;
  opacity: 0;
  pointer-events: none;
  @apply flex gap-2;
}

.editor-btns.delay {
  opacity: 1;
}

.app .editor-container:hover .editor-btns,
.app .editor-container:focus-within .editor-btns {
  transition: opacity ease-out 0.5s;
  opacity: 1;
  pointer-events: none;
}

button.icon-btn {
  @apply flex items-center justify-center;
  @apply bg-gray-100 border dark:border-gray-600 dark:bg-gray-800 text-blue-400 dark:text-white;
  @apply hover:bg-gray-200 dark:hover:bg-gray-700 dark:hover:border-gray-700;
  @apply px-3 py-2 rounded-md z-[12];
  @apply flex items-center justify-center;
  pointer-events: auto;

  @supports (backdrop-filter: blur(5px)) {
    @apply bg-opacity-20 dark:bg-opacity-30 backdrop-filter backdrop-blur-sm backdrop-saturate-200;
  }

  &.hide-btns {
    @apply transition-transform duration-[300ms];
    @apply bg-white border border-opacity-50 dark:border-gray-700/50 dark:bg-gray-800/70 text-blue-400 dark:text-white;
    @apply hover:bg-gray-400/60 dark:hover:bg-gray-700 dark:hover:border-gray-600;
    @apply rounded-full p-2 z-10;
    transition-property: transform, color, background-color, border-color,
      text-decoration-color, fill, stroke;
  }

  svg {
    @apply text-lg;
    vertical-align: middle;
    fill: currentColor;
    width: 1em;
  }
}

.editor-btns {
  @apply justify-end;
  .editor-btn-container {
    @apply transition-all duration-700;
    @apply translate-x-0 opacity-100;

    .fading-editor-btns {
      @apply transition-all duration-[650ms];
      @apply opacity-100;
    }

    &.hide {
      @apply translate-x-full;

      .fading-editor-btns {
        @apply opacity-0;
      }

      button.hide-btns {
        @apply transition-all duration-[500ms] delay-[250ms];
        &:active {
          @apply delay-[0ms];
        }

        @apply -translate-x-full;
      }
    }
  }

  .copy-container {
    @apply relative z-[10];
    // z-index: 5;
    button.copy-btn {
      @apply z-[12];
    }
  }

  .editor-info {
    @apply absolute top-0 right-0 z-0;
    transform: translateY(100px);

    &,
    &:hover {
      @apply bg-white dark:bg-gray-800  text-blue-500 dark:text-blue-500;

      @supports (backdrop-filter: blur(5px)) {
        @apply bg-opacity-50 dark:bg-opacity-60 backdrop-filter backdrop-blur-sm;
      }
    }
  }
}

